// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellItem - Demo Basic 1`] = `
<div class="ui-example-child ui-example-child-cell-item ui-example-child-cell-item-0">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-cell-item">
        <div class="ui-cell-item-body">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">普通条目</p>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">动作条目</p>
            <!---->
          </div>
          <div class="ui-cell-item-right">

            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item is-disabled">
        <div class="ui-cell-item-body">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">禁用条目</p>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`CellItem - Demo Content List 1`] = `
<div class="ui-example-child ui-example-child-cell-item ui-example-child-cell-item-2">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-cell-item">
        <div class="ui-cell-item-body multilines">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">交通银行(尾号3089)</p>
            <p class="ui-cell-item-brief">展示摘要描述</p>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body multilines">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">招商银行(尾号2342)</p>
            <p class="ui-cell-item-brief">展示摘要描述</p>
          </div>
          <div class="ui-cell-item-right">
            <div class="ui-switch"></div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body multilines">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">交通银行(尾号3089)</p>
            <p class="ui-cell-item-brief">展示摘要描述</p>
          </div>
          <div class="ui-cell-item-right">
            附加文案
            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body multilines">
          <div class="ui-cell-item-left"><span class="holder"></span></div>
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">交通银行</p>
            <p class="ui-cell-item-brief">展示摘要描述</p>
          </div>
          <div class="ui-cell-item-right">
            附加文案
            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item is-disabled">
        <div class="ui-cell-item-body multilines">
          <div class="ui-cell-item-left"><span class="holder"></span></div>
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">招商银行</p>
            <p class="ui-cell-item-brief">展示摘要描述</p>
          </div>
          <div class="ui-cell-item-right">
            禁用的项目
            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body multilines">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">CSII VX MOBILE</p>
            <p class="ui-cell-item-brief">A mobile UI toolkit</p>
          </div>
          <div class="ui-cell-item-right">

            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <div class="ui-cell-item-children">
          <p style="font-size:0.24rem;color:#858B9C;">
            面向金融场景的Vue移动端UI组件库，丰富、灵活、实用，快速搭建优质的金融类产品，让复杂的金融场景变简单。基于「合理、好用」设计价值观，从交互操作、视觉抽象、图形可视等角度共同解决问题。
          </p>
        </div>
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`CellItem - Demo Simple List 1`] = `
<div class="ui-example-child ui-example-child-cell-item ui-example-child-cell-item-1">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-cell-item">
        <div class="ui-cell-item-body">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">滴水贷</p>
            <!---->
          </div>
          <div class="ui-cell-item-right">
            可用8000.34
            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">滴水贷</p>
            <!---->
          </div>
          <div class="ui-cell-item-right">
            可用8000.34
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">信用付</p>
            <!---->
          </div>
          <div class="ui-cell-item-right">
            <div class="ui-switch"></div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item is-disabled">
        <div class="ui-cell-item-body">
          <!---->
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">信用付</p>
            <!---->
          </div>
          <div class="ui-cell-item-right">
            <div class="ui-switch disabled active"></div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body">
          <div class="ui-cell-item-left">
            <div class="holder"></div>
          </div>
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">滴水贷</p>
            <!---->
          </div>
          <div class="ui-cell-item-right">
            可用8000.34
            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
      <div class="ui-cell-item">
        <div class="ui-cell-item-body">
          <div class="ui-cell-item-left">
            <div class="holder"></div>
          </div>
          <div class="ui-cell-item-content">
            <p class="ui-cell-item-title">信用付</p>
            <!---->
          </div>
          <div class="ui-cell-item-right">
            可用8000.34
            <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;
